# agentic-identity-lab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.devcontainer/: devcontainer.json
.github/agents/: squad.agent.md
.github/workflows/: ci.yml  docker-build.yml  docs.yml  m8-deploy-live.yml  m8-live-oidc-contract.yml  m8-nightly-shutdown.yml  m8-smoke-trace.yml  m8-start-resume.yml  security-scan.yml  terraform-validate.yml
.squad/: decisions.md  routing.md  team.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/project/: roadmap.md
apps/agent-execution/python-fastapi-agent-framework/: Dockerfile  README.md  pyproject.toml
apps/agent-execution/python-fastapi-agent-framework/app/: __init__.py  auth.py  config.py  diagnostics.py  main.py
apps/bff/python-fastapi/: Dockerfile  README.md  pyproject.toml
apps/bff/python-fastapi/app/: auth.py  config.py  main.py
apps/sharepoint-classic/: README.md
apps/spfx-webpart/: README.md
config/claims/: claim-descriptions.json  safe-claims-allowlist.json
config/env/: agent-execution.env.example  agent-gateway.env.example  bff.env.example  mcp-protected-api.env.example  sharepoint-loader.env.example  spa.env.example
config/variants/: local.yaml  (+3 more)
docker/: README.md  docker-compose.cross-tenant.local.yml  docker-compose.single-tenant.yml  docker-compose.strict-aca.yml  docker-compose.tracing.yml  docker-compose.vendor-shaped.yml  docker-compose.yml  otel-collector-config.yaml
docs/: index.md
tests/: README.md
tools/: README.md
(+407 files in other folders)
