[project]
name = "identity-lab-agent-execution"
version = "0.1.0"
description = "Identity Lab Agent Execution Service."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "azure-monitor-opentelemetry-exporter>=1.0.0b30",
    "PyJWT>=2.8.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
